fix: add gap

--- a/src/styles/videoosd.scss
+++ b/src/styles/videoosd.scss
@@ -176,6 +176,7 @@
     margin-left: auto;
     display: flex;
     align-items: center;
+    gap: 0.125rem;
 }
 
 .osdMediaStatus .animate {
